# Autonomous-Vehicle-Competition-Spring-2025

./: ProjectVideoLinks  README.md
MPC_Simulation/: MPC_Sim.rviz
MPC_Simulation/src/diff_drive_mpc/: README.md  package.xml  setup.cfg  setup.py
MPC_Simulation/src/diff_drive_mpc/diff_drive_mpc/: __init__.py  mpc_controller.py  simulator.py  utils.py
MPC_Simulation/src/diff_drive_mpc/launch/: sim_launch.py
MPC_Simulation/src/diff_drive_mpc/resource/: diff_drive_mpc
deepRacerWS/: testingFile
deepRacerWS/launch/: veer_launch.py
deepRacerWS/src/black_line_detector_pkg/: package.xml  setup.cfg  setup.py
deepRacerWS/src/line_follower/: package.xml
deepRacerWS/src/pid_controller/: package.xml
deepRacerWS/src/ros2_pca9685/: .README.md.swp
deepRacerWS/src/test_drive/: setup.py
deepRacerWS/src/vision_pkg/: setup.py
launch/: launch_line_follower.py  line.py  school_drive.py  stopsign_drive.py  target_drive.py  veer_launch.py  vision_launch.py  vision_launch_copy.py
src/line_follower/: setup.py
src/line_follower/launch/: line_follower_control_launch.py
src/line_follower/line_follower/: controller.py  drive.py  line_follower_node.py  line_follower_node2.py  robot_control_node.py
src/pid_controller/: setup.py
src/pid_controller/pid_controller/: pid_node.py  pid_school.py  pid_stopsign.py
src/ros2_pca9685/ros2_pca9685/: subscriber_member_function.py
src/test_drive/: package.xml
src/traffic_sign_detector/: package.xml  setup.py
src/traffic_sign_detector/traffic_sign_detector/: traffic_sign_detection_node.py
src/vision_pkg/: package.xml  setup.py
(+18 files in other folders)
