<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_sign_detector</name>
  <version>0.0.1</version>
  <description>Traffic sign detection using OpenCV in ROS 2.</description>
  <maintainer email="xyz@gmail.com">turtlecar</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>opencv-python</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exporting build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
